# openapi/openapi.yaml
@@ -9,11 +9,18 @@ servers:
 
 
 paths:
-  /tasks:
+  /tasks/{id}:
     get:
-      summary: Get all tasks
+      summary: Get task by user id
       tags:
         - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
       responses:
         '200':
           description: A list of tasks
@@ -25,9 +32,16 @@ paths:
                   $ref: '#/components/schemas/Task'
 
     post:
-      summary: Create a new task
+      summary: Create a new task by user id
       tags:
         - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
       requestBody:
         description: The task to create
         required: true
@@ -42,8 +56,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
-
-  /tasks/{id}:
     patch:
       summary: Edit task
       tags:
